--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,21 @@
-.card {
+  .card {
     height: 400px; /* Your height here */
     overflow: hidden;
 }
 
 .card-image {
     height: 250px; /* Your height here */
+    overflow: hidden;
+}
+
+/*
+.card {
+    height: 400px; 
+    overflow: hidden;
+}
+
+.card-image {
+    height: 250px;
     overflow: hidden;
 }
 
@@ -33,7 +44,8 @@
     background: tomato;
     padding: 5px;
     width: 200px;
-    height: 150px;
+    
+height: 150px;
     margin-top: 10px;
 
     line-height: 150px;
@@ -42,3 +54,4 @@
     font-size: 3em;
     text-align: center;
 }
+*/
