--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,78 @@
-<!--this html files runs when the home function is called in my_app/views.py-->
-<!DOCTYPE html>
+<!--This html files runs when the home function is called in my_app/views.py-->
+<!--This loads the static library (the 'static' folder we created) which contains other 
+css and html files-->
+{% load static %}
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>rPalm's List </title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="{% static 'css/style.css'%}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
-        <h2>Testing to see if this works!</h2>
+        <nav>
+            <!--container class puts everything within the div into a structured format
+            which makes it easier to manage things later
+            the nav-wrapper class creates a navigation bar-->
+            <div class="container nav-wrapper">
+                <!--this says that the link to rPalm's List is root-->
+                <a href="/" class="brand-logo">rPalm's List</a>
+                <!--this tells html how to load the 'Home' link and to moves 
+                it to the right-->
+                <ul id="nav-mobile" class="right">
+                    <li><a href="/">Home</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container">
+            <!--in this h1 tag we are using a library called 'flex-box' which automatically
+            resizes the images that are passed in-->
+            <h1 style="text-align: center">What do you wnat to search for on rPalm's List?</h1>
+                <div class="row">
+                    <!--this class tells html how to load the column size-->
+                    <div class="col s4">
+                        <!-- Promo Content 1 goes here -->
+                        <div class="center">
+                            <!--we are grabbing these premade icons from the materialize website-->
+                            <i class="Large material-icons" style="color: #EE6E73">flash_on</i>
+                            <p>Fast craigslist web scraper</p>
+                            <p class="light center">Scrape away right here with a beautiful GUI.</p>
+                        </div>
+                    </div>
+                    <div class="col s4">
+                        <!-- Promo Content 2 goes here -->
+                        <div class="center">
+                            <i class="large material-icons" style="color: orange">camera</i>
+                            <p>Filter your searches</p>
+                            <p class="light center">We built in funtionality to filter based on pricing.</p>
+                        </div>
+                    </div>
+                    <div class="col s4">
+                        <!-- Promo Content 3 coes here -->
+                        <div class="center">
+                            <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
+                            <p>A much sexier front-end to Craigslist</p>
+                            <p class="light center">We built this with love &#129505;.</p>
+                        </div>
+                    </div>
+                </div>
+                <!--this gives us our search fuctionality-->
+                <form action="{% url 'new_search' %}" method="post">
+                    <!--this is a security feature in django which executes when somehting is 
+                    submitted to the webpage-->
+                    {% csrf_token %}
+                    <input type="text" name="search" placeholder="search">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <i class="material-icons right">send</i>
+                    </button>
+                </form>
+                {% block content %}
+                {% endblock content %}
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
