--- a/templates/my_app/new_search.html
+++ b/templates/my_app/new_search.html
@@ -7,19 +7,28 @@ it in a different file-->
 <!--we are grabbing the search variable that we defined in the views
 the | title forces the input to capitalize every word-->
     <h2 style="text-align: center">{{ search | title }}</h2>
+
+    <!-- {% for post in final_postings %}
+        <p>{{ post.0 }}</p>
+        <p>{{ post.1 }}</p>
+        <p>{{ post.2 }}</p>
+    {% endfor %} -->
+
     <div class="row">
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://th.bing.com/th/id/R6c101d1e27bdad589f2224c771312bfa?rik=isoNyTjWLe3GCA&riu=http%3a%2f%2fweneedfun.com%2fwp-content%2fuploads%2f2015%2f10%2fCute-puppy-Pictures-29.jpg&ehk=c4Pri2hAYt5j%2b1ZUn%2bq04AcxiTD1gA6Nve6HmotswRE%3d&risl=&pid=ImgRaw" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>TEST</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price TEST PRICE</a>
+        {% for post in final_postings %}
+            <div class="col s4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="{{ post.1 }}"><img src="{{ post.3 }}" alt=""></a>
+                    </div>
+                    <div class="card-content">
+                        <p>{{ post.0 }}</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="{{ post.1 }}">View listing: Price {{ post.2 }}}</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endfor %}   
     </div>
 {% endblock content %}
