--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@ css and html files-->
         <div class="container">
             <!--in this h1 tag we are using a library called 'flex-box' which automatically
             resizes the images that are passed in-->
-            <h1 style="text-align: center">What do you wnat to search for on rPalm's List?</h1>
+            <h1 style="text-align: center">What do you want to search for on rPalm's List?</h1>
                 <div class="row">
                     <!--this class tells html how to load the column size-->
                     <div class="col s4">
